2009-07-17  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Remove use of WITH_OPENJDK, WITH_ICEDTEA
	and SYSTEM_GCJ_DIR replacing with BOOTSTRAPPING
	and SYSTEM_JDK_DIR as appropriate.
	* acinclude.m4:
	(FIND_JAVAC): Search for generic 'javac' first.
	(IT_FIND_ECJ): Only use ecj as javac if JAVA is unset.
	(FIND_JAVAH): Try javah in SYSTEM_JDK_DIR before searching.
	(FIND_JAR): Likewise for jar.
	(FIND_RMIC): Likewise for rmic.
	(IT_CHECK_IF_BOOTSTRAPPING): Allow bootstrapping to be disabled.
	Replaces --with-icedtea/--with-openjdk.
	(IT_CHECK_FOR_JDK): Find JDK to use.  Replaces --with-gcj-jdk,
	--with-icedtea-home, --with-openjdk-home.  At present, only checks
	for gcj jdks if not bootstrapping.
	(AC_CHECK_FOR_OPENJDK): Removed.
	(AC_CHECK_FOR_ICEDTEA): Removed.
	(AC_CHECK_FOR_GCJ_JDK): Removed.
	* configure.ac:
	Remove --with-icedtea and --with-openjdk.  Always check
	for a JDK and then allow individual binaries to be overridden
	by --with-x.
	* javac.in:
	Replace SYSTEM_GCJ_DIR with SYSTEM_JDK_DIR.

2009-07-15  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Turn on euctw patch for systems without
	java.util.Scanner.
	* patches/ecj/icedtea-euctw.patch:
	Remove java.util.Scanner from GenerateEUC_TW.java

2009-07-14  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-messageutils.patch,
	* patches/icedtea-toolkit.patch:
	Dropped, committed upstream by Lillian.
	* Makefile.am: Bump to b64.
	* patches/ecj/icedtea-dbcs.patch,
	* patches/ecj/icedtea.patch,
	* patches/icedtea-linker-libs-order.patch,
	* patches/icedtea-webstart.patch:
	Recreated.

2009-07-09  Andrew John Hughes  <ahughes@redhat.com>

	* patches/ecj/icedtea-pr40616.patch:
	Add missing patch.

2009-07-09  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump to b63 and latest IcedTea changesets.
	Add ANT_RESPECT_JAVA_HOME for Gentoo ant support.
	Support patches for PR40616 and PR40630.  Only
	apply Scanner patches when needed.
	* acinclude.m4: