@@ -1,3 +1,10 @@
+2009-07-20  Andrew John Hughes  <ahughes@redhat.com>
+
+	* acinclude.m4:
+	(IT_LIBRARY_CHECK): Check the class can be
+	run as well, for when java and javac use
+	different class libraries.
+
 2009-07-17  Andrew John Hughes  <ahughes@redhat.com>
 
 	* Makefile.am:
